--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </h3>
       </div>
       <div class="main-right-item">
-          <img src="img/news2.jpg" class="main-item" alt=""/>
+          <img src="img/news1.jpg" class="main-item" alt=""/>
           <h2>
               And again - it's totally amazing
             </h2>
@@ -149,7 +149,7 @@
      
       <div class="footer-coder">
         <p>
-          Design and coding by Max Hurskyi
+          Design and coding by name
         </p>
       </div>
 
